# Recap

./: .gitignore  AGENTS.md  CODING_GUIDELINES.md  PROJECT_LOG.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  config.anime.movie.yaml  config.anime.series.localvision.yaml  config.anime.series.practical.yaml  config.anime.series.yaml  config.example.yaml  config.movie.production.ai33.yaml  config.movie.production.yaml  config.movie.stable.yaml  config.movie.visual.yaml  config.reaction-remix.yaml  config.vi.balanced.auto.yaml  config.vi.fast.yaml  config.vi.low_openai.yaml  config.vi.stable.yaml  glossary.example.yaml  pyproject.toml  run.py  run_reaction.py  tach.toml
.github/workflows/: release-gate.yml
broll/: __init__.py  __main__.py  apply.py  planner.py  schema.py
common/: inputs.py  integrity.py  media.py  narration_qa.py  runtime.py  schema.py
docs/reaction-remix/: 01-product-scope.md  02-pipeline-architecture.md  03-data-contracts.md  04-content-analysis.md  05-editorial-planning.md  06-audio-and-tts.md  07-render-and-qa.md  08-implementation-roadmap.md  README.md  poc-0930-1230.md
episode_planner/: __init__.py  __main__.py  integrity.py  planner.py
examples/: visual_golden.example.json
examples/anime/: anime_context.example.yaml  series_manifest.example.yaml
examples/style/: viral_recap_vi.cleaned.txt
examples/tts/: vi_pronunciation_lexicon.example.yaml
ingest/: __main__.py  asr.py  cache.py  correction.py  film_map.py  gaps.py  integrity.py  llm.py  local_vision.py  schema.py  transcribe.py  vision.py
match/: __main__.py  anchors.py  cache.py  calibrate_visual.py  candidates.py  fill.py  inputs.py  intra_beat.py  qa.py  refinement_ab.py  review_html.py  scoring.py  semantic.py  sync_qa.py  timing.py  version.py  visual.py
orchestrator/: __init__.py  config.py  cost_policy.py  graph.py  runner.py  summary.py
preflight/: __main__.py  detect.py  integrity.py
reaction_remix/: __init__.py  _artifacts.py
reaction_remix/analyze/: __init__.py  __main__.py  asr.py  core.py  language.py  regions.py  speakers.py
reaction_remix/compose/: __init__.py  __main__.py  cache.py  composer.py
reaction_remix/orchestrator/: __init__.py  commands.py  config.py  graph.py  paths.py  repair_state.py  runner.py  runtime.py  summary.py  validation.py
reaction_remix/plan/: __init__.py  __main__.py  core.py  models.py  prompts.py  session.py
reaction_remix/probe/: __init__.py  __main__.py  media_probe.py
reaction_remix/qa/: __init__.py  __main__.py  checks.py  report_html.py
reaction_remix/render/: __init__.py  __main__.py  cache.py  commands.py  engine.py  quantize.py
reaction_remix/segment/: __init__.py  (+5 more)
render/: __init__.py  __main__.py  cache.py  captions.py  compose.py  cut.py  quantize.py
review/: __main__.py  budget.py  cache.py  consistency.py  coverage.py  inputs.py  integrity.py  intent.py  json_utils.py  llm_flow.py  micro_beats.py  models.py  movie_mode.py  non_story.py  openai_chat.py  playwright_chat.py  repetition.py  session.py  style.py  timecode.py  view.py
scripts/: __init__.py  cache_integrity_smoke.py  check_secrets.py  check_wheel.py  release_check.ps1  release_helpers.py
series_composer/: __init__.py  __main__.py  builder.py
series_match/: __init__.py  __main__.py
series_recap/: __init__.py  __main__.py
shots/: __main__.py  cache.py  detect.py  end_credits.py  features.py  profile.py  thumbs.py
storymap/: __init__.py  __main__.py  builder.py  cache.py
tests/: reaction_factories.py  test_anime_context.py  test_broll.py  test_cache.py  test_cli.py  test_cost_policy.py  test_episode_planner.py  test_gaps.py  test_ingest_asr.py  test_ingest_asr_cli.py  test_ingest_correction.py  test_ingest_transcribe.py  test_ingest_whisperx.py  test_llm.py  test_match_anchors.py  test_match_candidates.py  test_match_cli.py  test_match_fill.py  test_match_intra_beat.py  test_match_non_story.py  test_match_opening_guard.py  test_match_opening_story_visual.py  test_match_ordered_fill.py  test_match_repeat_guard.py  test_match_review_html.py  test_match_schema.py  test_match_scoring.py  test_match_semantic.py  test_match_sync_qa.py  test_match_visual.py  test_orchestrator_graph.py  test_orchestrator_runner.py  test_orchestrator_summary.py  test_packaging.py  test_preflight_detect.py  test_preflight_schema.py  test_reaction_analyze.py  test_reaction_orchestrator.py  test_reaction_probe.py  test_reaction_schema.py  (+53 more)
tts/: __main__.py  cache.py  concat.py  cost.py  pronunciation_qa.py  providers.py  sanitize.py  timing.py
tts_align/: __init__.py  __main__.py
visual_index/: __init__.py  __main__.py  encoder.py  frames.py  integrity.py
(+30 files in other folders)
