[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recap"
version = "0.1.0"
description = "Auto movie recap pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "openai>=1.40,<2",
    "faster-whisper>=1.0,<2",
    "playwright>=1.40,<2",
    "scenedetect>=0.6,<1",
    "opencv-python-headless>=4.9,<5",
    "numpy>=1.26,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
]
asr-align = [
    "torch>=2.8",
    "torchaudio>=2.8",
    "whisperx>=3.8,<4",
]
semantic-embed = [
    "torch>=2.8",
    "sentence-transformers>=3.0,<5",
]
video-profile = [
    "torch>=2.8",
    "open-clip-torch>=2.24,<3",
    "Pillow>=10,<12",
]
visual-index = [
    "torch>=2.8",
    "transformers>=4.53,<5",
    "Pillow>=10,<12",
    "safetensors>=0.4,<1",
]
movie-visual = [
    "torch>=2.8",
    "torchaudio>=2.8",
    "whisperx>=3.8,<4",
    "sentence-transformers>=3.0,<5",
    "transformers>=4.53,<5",
    "Pillow>=10,<12",
    "safetensors>=0.4,<1",
]

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "common*",
    "ingest*",
    "match*",
    "orchestrator*",
    "preflight*",
    "render*",
    "review*",
    "shots*",
    "storymap*",
    "tts*",
    "visual_index*",
]
exclude = [
    "tests*",
    "runs*",
    "work*",
    "data*",
    "broll*",
    "tts_align*",
    "__pycache__*",
    "build*",
    "dist*",
    "*.egg-info*",
]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
